# Bgpt

./: README.md  pyproject.toml  requirements.txt  setup.py
bgpt/: __init__.py  main.py  setup.py  setup_local.py
bgpt/config/: __init__.py  manager.py
bgpt/core/: __init__.py  ai_engine.py  executor.py  safety.py
bgpt/plugins/: __init__.py
bgpt/providers/: local.py  openai.py
bgpt/ui/: terminal.py
bgpt/utils/: __init__.py  history.py  logger.py
